--- a/function_code/UI/ePI-Portal/src/app/document-view/document-view/document-view.component.scss
+++ b/function_code/UI/ePI-Portal/src/app/document-view/document-view/document-view.component.scss
@@ -1,7 +1,10 @@
 :host {
     .ema-document-view {
-        height: calc(100vh - 284px);
+        height: calc(100vh - 268px);
         overflow: auto;
+        p{
+            margin:0px;
+        }
         @media (max-width: 576px) {
             & {
                 height: 100%;
