--- a/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/header/header.component.scss
+++ b/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/header/header.component.scss
@@ -6,6 +6,7 @@
         &-navbar {
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
             padding: 0px;
+            position: relative;
             .container-fluid {
                 padding: 0px;
                 .navbar-toggler{
@@ -20,6 +21,7 @@
                 .navbar-toggler-icon{
                     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
                 }
+                
             }
             ul{
                 padding:0px;
@@ -61,6 +63,16 @@
                 &-active {
                     color: $ema-text-focused;
                     border-bottom: 4px solid $ema-primary;
+                }
+            }
+            @media (max-width: 992px) {
+               .navbar-collapse{
+                    position: absolute;
+                    top:80px;
+                    width: 100%;
+                    z-index: 999;
+                    background-color: #ffffff;
+                    border-bottom: 1px solid $ema-border;
                 }
             }
         }
