--- a/function_code/UI/ePI-Portal/src/app/app.component.scss
+++ b/function_code/UI/ePI-Portal/src/app/app.component.scss
@@ -1,4 +1,10 @@
 
-body{
+html, body{
     font-family:'Segoe UI', 'Times New Roman', sans-serif !important;
+    overflow: hidden;
+    @media (max-width: 576px) {
+        & {
+            overflow: hidden;
+        }
+    }
 }
