--- a/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/molecules/tree/tree.component.scss
+++ b/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/molecules/tree/tree.component.scss
@@ -12,6 +12,7 @@
                 width:100%;
                 display: block;
                 word-wrap: break-word;
+                color: #000000;
                 &:hover{
                     font-weight: 700;
                     color: #000000;;
