--- a/function_code/UI/ePI-Portal/src/app/pages/document-view/document-view/document-view.component.html
+++ b/function_code/UI/ePI-Portal/src/app/pages/document-view/document-view/document-view.component.html
@@ -1,12 +1,33 @@
 <div class='ema-view-page'>
     <section class='ema-document-view'>
-        <div class='row'>
+        <div class='row ema-document-main'>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 ema-document-nav">
                 <ema-sidebar [menuNodes]="menuItems"></ema-sidebar>
             </div>
             <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ema-document-body">
                 <ema-document-header></ema-document-header>
+                <ema-action-links [actionList]='docTypeList'></ema-action-links>
                 <div class="ema-medView-body">
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
+                    <p>Information in document</p>
                     <p>Information in document</p>
                     <p>Information in document</p>
                     <p>Information in document</p>
@@ -24,7 +45,6 @@
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <ema-footer></ema-footer>
-
             </div>
         </div>
     </section>
