--- a/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/ema-design-system.scss
+++ b/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/ema-design-system.scss
@@ -1,2 +1,3 @@
 @import "~bootstrap/dist/css/bootstrap.css";
-@import './ema-theme-variables.scss'
+@import './ema-theme-variables.scss';
+@import './scss/modal.scss';
