--- a/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.scss
+++ b/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.scss
@@ -40,14 +40,13 @@
             justify-content: flex-end;
             ul {
                 list-style: none;
-                width: 100%;
 
                 display: flex;
                 flex-wrap: wrap;
                 padding: 0px;
                 margin: 0px;
                 li {
-                    margin-right: 24px;
+                    margin-left: 24px;
                     font-size: 16px;
                     line-height: 21px;
                     color: $ema-text-focused;
@@ -61,13 +60,28 @@
                             margin:0px 8px 0px 0px;
                         }
                     }
+                    @media (max-width: 1126px) {
+                        
+                        .ema-med-lang-label{
+                            margin-bottom:8px;
+                        }
+                    }
                     @media (max-width: 992px) {
                         & {
                             margin-bottom: 8px;
                         }
+                        .ema-med-lang-label{
+                            margin-bottom:8px;
+                        }
                     }
                 }
-                
+               
+            }
+            
+            @media (max-width: 576px) {
+                & {
+                    justify-content: start;
+                }
             }
         }
         &-share-icon {
