--- a/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/footer/footer.component.scss
+++ b/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/footer/footer.component.scss
@@ -10,7 +10,7 @@
         &-links {
             list-style: none;
             margin: 0px 0px 28px 0px;
-            padding: 0px 80px;
+            padding: 0px 40px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -40,16 +40,19 @@
             align-items: center;
             justify-content: center;
             list-style: none;
-            padding: 0px 80px;
+            padding: 0px 40px;
             margin-bottom:0px;
             li {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                svg{
-                max-width: 150px;
-
-                }
+               
+                @media (max-width: 576px) { 
+                    & {
+                        margin-bottom:16px;
+                    }
+                 }
+                
             }
         }
         @media (max-width: 576px) { 
