--- a/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/header/header.component.scss
+++ b/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/header/header.component.scss
@@ -30,12 +30,11 @@
             &-logo {
                 min-width: 73px;
                 margin: 0px;
-                background-color: $ema-primary;
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
                 align-items: center;
-                padding: 16px 81px;
+                padding: 10px 81px;
                 color: #ffffff;
                 font-weight: bold;
                 font-size: 36px;
@@ -59,16 +58,24 @@
                 padding: 26px 40px !important;
                 display: flex;
                 align-items: center;
+                &:hover{
+                    cursor:pointer;
+                }
 
                 &-active {
                     color: $ema-text-focused;
                     border-bottom: 4px solid $ema-primary;
                 }
+                &-disabled{
+                    &:hover{
+                        cursor: not-allowed;
+                    }
+                }
             }
             @media (max-width: 992px) {
                .navbar-collapse{
                     position: absolute;
-                    top:80px;
+                    top:78px;
                     width: 100%;
                     z-index: 999;
                     background-color: #ffffff;
