--- a/function_code/UI/ePI-Portal/src/app/pages/document-view/document-view/document-view.component.scss
+++ b/function_code/UI/ePI-Portal/src/app/pages/document-view/document-view/document-view.component.scss
@@ -1,5 +1,5 @@
 :host {
-    .ema-view-page{
+    .ema-view-page {
         height: calc(100vh - 80px);
         @media (max-width: 576px) {
             & {
@@ -9,54 +9,58 @@
         }
     }
     .ema-document {
-        &-view{
+        &-view {
             height: inherit;
             overflow-y: auto;
-            .row{
-                padding:0px;
-                margin:0px;
-                width:100%;
+            .row {
+                padding: 0px;
+                margin: 0px;
+                width: 100%;
             }
             p {
                 margin: 0px;
-                width:100%;
+                width: 100%;
             }
             @media (max-width: 576px) {
                 & {
-                    max-width:100%;
-                    width:100%;
-                    height:100%;
-                }
-            }
-           
-        }
-        &-nav{
-            
-            padding:0px;
-            @media (max-width: 576px) {
-                & {
-                    max-width:100%;
-                    width:100%;
+                    max-width: 100%;
+                    width: 100%;
+                    height: 100%;
                 }
             }
         }
-        &-body{
-           
-            padding:0px;
+        &-main {
+            min-height: calc(100% - 188px);
+        }
+        &-nav {
+            padding: 0px;
+            @media (max-width: 576px) {
+                & {
+                    max-width: 100%;
+                    width: 100%;
+                }
+            }
+        }
+        &-body {
+            padding: 0px;
 
             @media (max-width: 576px) {
                 & {
-                    max-width:100%;
-                    width:100%;
-                    height:100%;
+                    max-width: 100%;
+                    width: 100%;
+                    height: 100%;
                 }
             }
-
         }
     }
-    .ema-medView{
-        &-body{
-            padding:40px;
+    .ema-medView {
+        &-body {
+            padding: 40px;
+            // height:calc(100% - 154px);
+            background-image: url("../../../../assets/WatermarkDisclaimer..png");
+            background-repeat: no-repeat space;
+            background-position: center;
+            background-size: 80%;
         }
     }
 }
