Portal document content injection changes

--- a/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.scss
+++ b/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.scss
@@ -84,10 +84,16 @@
                 }
             }
         }
+        &-share{
+            &:hover{
+                cursor: not-allowed;
+            }
+        }
         &-share-icon {
             display: block;
             margin-right: 8px;
             margin-bottom: 0px;
+            
         }
         &-lang-label {
             margin-right: 8px;
