--- a/function_code/UI/ePI-Portal/src/app/pages/document-view/document-view/document-view.component.html
+++ b/function_code/UI/ePI-Portal/src/app/pages/document-view/document-view/document-view.component.html
@@ -8,36 +8,7 @@
                 <ema-document-header></ema-document-header>
                 <ema-action-links [actionList]='docTypeList'></ema-action-links>
                 <div class="ema-medView-body">
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
-                    <p>Information in document</p>
+                    <ema-document-body-tree [sectionData]="documentData"></ema-document-body-tree>
                 </div>
 
             </div>
