--- a/function_code/UI/ePI-Portal/src/app/pages/search-page/search-page.component.html
+++ b/function_code/UI/ePI-Portal/src/app/pages/search-page/search-page.component.html
@@ -5,25 +5,30 @@
             </div>
             <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ema-search-body">
                 <div class="ema-medView-body">
-                    <p>Elocta SMPC</p>
+                    <p><b>Elocta SMPC</b></p>
                     <a [routerLink]="['/View', '21693318-cb50-4547-810c-147b61fd24af']">21693318-cb50-4547-810c-147b61fd24af</a>
-                
-                    <p>Elocta Annex II</p>
+                    <p><br></p>
+                    <p><b>Elocta Annex II</b></p>
                     <a [routerLink]="['/View', 'f12ed845-ee6e-49ef-92dc-33d5fb1a4a86']">f12ed845-ee6e-49ef-92dc-33d5fb1a4a86</a>
-                    <p>Elocta Labelling</p>
-                    <a [routerLink]="['/View', 'a5b54c09-2c35-43f8-a091-50fcc99fac2f']">a5b54c09-2c35-43f8-a091-50fcc99fac2f</a>
-                    <p>Elocta Package Leaflet</p>
+                    <p><br></p>
+                    <p><b>Elocta Labelling</b></p>
+                    <a [routerLink]="['/View', '437d3949-2623-4b9d-be68-b470f94db5b5']">437d3949-2623-4b9d-be68-b470f94db5b5</a>
+                    <p><br></p>
+                    <p><b>Elocta Package Leaflet</b></p>
                     <a [routerLink]="['/View', '5154676c-f646-4e02-bd25-11d4ab054b72']">5154676c-f646-4e02-bd25-11d4ab054b72</a>
+                    <p><br></p>
 
-                    <p>Kalydeco SMPC</p>
+                    <p><b>Kalydeco SMPC</b></p>
                     <a [routerLink]="['/View', 'fc5b2006-68cd-4b36-aca5-7f412e316036']">fc5b2006-68cd-4b36-aca5-7f412e316036</a>
+                    <p><br></p>
                     
-                    <p>Kalydeco Annex II</p>
+                    <p><b>Kalydeco Annex II</b></p>
                     <a [routerLink]="['/View', '49c08f8f-ada2-4c7b-a67f-08f3dc3afe28']">49c08f8f-ada2-4c7b-a67f-08f3dc3afe28</a>
-                    <p>Kalydeco Labelling</p>
+                    <p><br></p>
+                    <p><b>Kalydeco Labelling</b></p>
                     <a [routerLink]="['/View', 'c622a1c3-af89-44f0-95ba-48ee9e51dd57']">c622a1c3-af89-44f0-95ba-48ee9e51dd57</a>
-
-                    <p>Kalydeco Package Leaflet</p>
+                    <p><br></p>
+                    <p><b>Kalydeco Package Leaflet</b></p>
                     <a [routerLink]="['/View', 'de0704db-324d-4b62-8f31-c2ee2a4dd5d5']">de0704db-324d-4b62-8f31-c2ee2a4dd5d5</a>
                     
                 </div>
