--- a/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.html
+++ b/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.html
@@ -2,7 +2,7 @@
     <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ema-med-name">Document Name</div>
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 ema-med-actions">
         <ul>
-            <li>
+            <li class="ema-med-share">
                 <span class="ema-med-share-icon">
                     <ema-share-icon></ema-share-icon>
                 </span>
