--- a/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/molecules/tree/tree.component.scss
+++ b/function_code/UI/ePI-Portal/projects/ema-component-library/src/lib/molecules/tree/tree.component.scss
@@ -1,25 +1,26 @@
-:host{
-    ul{
+:host {
+    ul {
         list-style: none;
         padding-left: 16px;
         font-size: 18px;
-        margin:0px;
-        li{
+        margin: 0px;
+        li {
             font-size: 16px;
             font-weight: 400;
             margin-bottom: 8px;
-            .ema-tree-node{
-                width:100%;
+            .ema-tree-node {
+                width: 100%;
                 display: block;
                 word-wrap: break-word;
                 color: #000000;
-                &:hover{
+                text-decoration: none;
+                &:hover {
                     font-weight: 700;
-                    color: #000000;;
+                    color: #000000;
                     cursor: pointer;
+                    text-decoration: none;
                 }
             }
-            
         }
     }
 }
