--- a/function_code/UI/ePI-Portal/src/app/app.component.scss
+++ b/function_code/UI/ePI-Portal/src/app/app.component.scss
@@ -1,10 +1,13 @@
 
 html, body{
-    font-family:'Segoe UI', 'Times New Roman', sans-serif !important;
+    font-family: 'Times New Roman', sans-serif !important;
     overflow: hidden;
     @media (max-width: 576px) {
         & {
             overflow: hidden;
         }
+    }
+    *{
+        font-family:'Segoe UI', 'Times New Roman', sans-serif !important;
     }
 }
