--- a/function_code/UI/ePI-Portal/src/app/pages/document-view/document-view/document-view.component.scss
+++ b/function_code/UI/ePI-Portal/src/app/pages/document-view/document-view/document-view.component.scss
@@ -43,7 +43,7 @@
         }
         &-body {
             padding: 0px;
-
+            overflow: auto;
             @media (max-width: 576px) {
                 & {
                     max-width: 100%;
