Routing based on list, language and document id

--- a/portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.html
+++ b/portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.html
@@ -12,7 +12,7 @@
                 <span class="ema-med-lang-label">
                     Language
                 </span>
-                <ema-dropdown></ema-dropdown>
+                <ema-dropdown [dropdownOptions]='dropdownOptions' (onLangChange)='onLangChange($event)'[selectedOption] = 'languageSelected'></ema-dropdown>
             </li>
         </ul>
     </div>
