--- a/portal/projects/ema-component-library/src/lib/molecules/disclaimer-modal/disclaimer-modal.component.html
+++ b/portal/projects/ema-component-library/src/lib/molecules/disclaimer-modal/disclaimer-modal.component.html
@@ -3,11 +3,14 @@
 
 </div>
 <div class="modal-body">
-    <p>To view documents, you must confirm that you have read and understood the disclaimer.</p>
-    <p>The disclaimer contains the following information:</p>
-    <ul>
-        <li>The information on this website <b>is not intended for public use.</b></li>
-    </ul>
+    <p>These web pages are not intended to be used as a source of information on medicines.</p>
+    <p>The web pages are not kept up to date and are for demonstration purposes only.</p>
+    <p>For up-to-date information on a medicine, please consult 
+        <a
+            href="www.ema.europa.eu/medicines">www.ema.europa.eu/medicines</a> or the package leaflet of your medicine.
+    </p>
+    <p>To view these demonstration pages, you must confirm that you have read and understood the disclaimer.</p>
+
 </div>
 <div class="modal-footer">
     <button type="button" class="btn modal-btn" (click)="closeDisclaimer()">Accept</button>
