--- a/portal/projects/ema-component-library/src/lib/molecules/tree/tree.component.html
+++ b/portal/projects/ema-component-library/src/lib/molecules/tree/tree.component.html
@@ -1,8 +1,8 @@
 <ul class="ema-tree">
     <li *ngFor="let node of treeData" >
         
-        <!-- <span *ngIf="node.children != 0"><b>></b></span> -->
-        <a class="ema-tree-node" [routerLink]="['.']" [fragment]="node.id?.value" (click)="scrollToAnchor(node.id?.value)"> {{ node.title }} </a>
-        <ema-tree  [treeData]="node.section"></ema-tree>
+        
+        <a class="ema-tree-node" [routerLink]="['.']" [fragment]="node.id?.value" [replaceUrl]="true"> <span class="ema-tree-node-toggle" *ngIf="node.section?.length > 0 && false" (click)="toggleChild(node)"><b>></b></span> <span (click)="scrollToAnchor(node.id?.value)">{{ node.title }}</span> </a>
+        <ema-tree [treeData]="node.section"></ema-tree>
     </li>  
   </ul>
