--- a/portal/src/app/pages/search-page/search-page.component.html
+++ b/portal/src/app/pages/search-page/search-page.component.html
@@ -5,7 +5,7 @@
             </div>
             <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ema-search-body">
                 <div class="ema-medView-body">
-                    <p><b>Elocta SMPC</b></p>
+                    <!-- <p><b>Elocta SMPC</b></p>
                     <a [routerLink]="['/View', '21693318-cb50-4547-810c-147b61fd24af']">21693318-cb50-4547-810c-147b61fd24af</a>
                     <p><br></p>
                     <p><b>Elocta Annex II</b></p>
@@ -30,7 +30,16 @@
                     <p><br></p>
                     <p><b>Kalydeco Package Leaflet</b></p>
                     <a [routerLink]="['/View', 'de0704db-324d-4b62-8f31-c2ee2a4dd5d5']">de0704db-324d-4b62-8f31-c2ee2a4dd5d5</a>
-                    
+
+
+                     -->
+                     <p><b>Zynteglo</b></p>
+                     <a (click)="linkClicked('5ab10585-9823-40a7-910b-193fbf4058c7')">5ab10585-9823-40a7-910b-193fbf4058c7</a>
+                     <p><br></p>
+                     <p><b>Elocta</b></p>
+                     <a (click)="linkClicked('f9340b0e-f8cb-4dd9-84ed-9e057fd09896')" >f9340b0e-f8cb-4dd9-84ed-9e057fd09896</a>
+                     <p><br></p>
+
                 </div>
 
             </div>
