--- a/portal/src/app/pages/search-page/search-page.component.scss
+++ b/portal/src/app/pages/search-page/search-page.component.scss
@@ -29,6 +29,12 @@
                     height:100%;
                 }
             }
+            a{
+                &:hover{
+                    cursor:pointer;
+                    text-decoration: underline;
+                }
+            }
            
         }
         &-main{
