--- a/portal/projects/ema-component-library/src/lib/layouts/header/header.component.html
+++ b/portal/projects/ema-component-library/src/lib/layouts/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg ema-navbar">
     <div class="container-fluid">
-      <a class="ema-navbar-logo" [routerLink]="['/Search']"><ema-header-logo></ema-header-logo></a>
+      <a class="ema-navbar-logo" [routerLink]="['./Search']"><ema-header-logo></ema-header-logo></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
