--- a/portal/src/app/pages/document-view/document-view/document-view.component.scss
+++ b/portal/src/app/pages/document-view/document-view/document-view.component.scss
@@ -34,6 +34,12 @@
         }
         &-nav {
             padding: 0px;
+            @media (min-width: 576px) {
+                & {
+                    max-width: 33.33%;
+                    width: 100%;
+                }
+            }
             @media (max-width: 576px) {
                 & {
                     max-width: 100%;
@@ -56,7 +62,7 @@
     .ema-medView {
         &-body {
             padding: 40px;
-            // height:calc(100% - 154px);
+            min-height:500px;
             background-image: url("../../../../assets/WatermarkDisclaimer..png");
             background-repeat: no-repeat space;
             background-position: center;
