--- a/portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.html
+++ b/portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.html
@@ -1,14 +1,14 @@
 <div class="row ema-document-header">
-    <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ema-med-name">Document Name</div>
+    <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ema-med-name">{{title}}</div>
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 ema-med-actions">
         <ul>
-            <li class="ema-med-share">
+            <li *ngIf = "showShareFeature" class="ema-med-share">
                 <span class="ema-med-share-icon">
                     <ema-share-icon></ema-share-icon>
                 </span>
                 Share
             </li>
-            <li>
+            <li *ngIf='showLangDropdown'>
                 <span class="ema-med-lang-label">
                     Language
                 </span>
