--- a/portal/src/app/pages/document-view/document-view/document-view.component.html
+++ b/portal/src/app/pages/document-view/document-view/document-view.component.html
@@ -2,10 +2,10 @@
     <section class='ema-document-view'>
         <div class='row ema-document-main'>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 ema-document-nav">
-                <ema-sidebar [menuNodes]="showDataInUI? menuItems: []"></ema-sidebar>
+                <ema-sidebar [menuNodes]="showDataInUI? menuItems: null"></ema-sidebar>
             </div>
             <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ema-document-body">
-                <ema-document-header [dropdownOptions]="availableLanguages" (changeLang)='onLanguageChange($event)' [languageSelected]='currentLang'>
+                <ema-document-header [title]="medicineName" [showLangDropdown]="true" [showShareFeature]="true" [dropdownOptions]="availableLanguages" (changeLang)='onLanguageChange($event)' [languageSelected]='currentLang'>
                 </ema-document-header>
                 <ema-action-links (onActionClick)=changeDoctype($event) [actionList]='docTypeList'></ema-action-links>
                 <div class="ema-medView-body">
