--- a/portal/src/app/pages/search-page/search-page.component.html
+++ b/portal/src/app/pages/search-page/search-page.component.html
@@ -2,50 +2,34 @@
     <section class='ema-search-view'>
         <div class='row ema-search-main'>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 ema-search-nav">
+                <p class="ema-nav-title">Filters</p>
+                <p>Coming Soon...</p>
             </div>
             <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ema-search-body">
-                <div class="ema-medView-body">
-                    <!-- <p><b>Elocta SMPC</b></p>
-                    <a [routerLink]="['/View', '21693318-cb50-4547-810c-147b61fd24af']">21693318-cb50-4547-810c-147b61fd24af</a>
-                    <p><br></p>
-                    <p><b>Elocta Annex II</b></p>
-                    <a [routerLink]="['/View', 'f12ed845-ee6e-49ef-92dc-33d5fb1a4a86']">f12ed845-ee6e-49ef-92dc-33d5fb1a4a86</a>
-                    <p><br></p>
-                    <p><b>Elocta Labelling</b></p>
-                    <a [routerLink]="['/View', '437d3949-2623-4b9d-be68-b470f94db5b5']">437d3949-2623-4b9d-be68-b470f94db5b5</a>
-                    <p><br></p>
-                    <p><b>Elocta Package Leaflet</b></p>
-                    <a [routerLink]="['/View', '5154676c-f646-4e02-bd25-11d4ab054b72']">5154676c-f646-4e02-bd25-11d4ab054b72</a>
-                    <p><br></p>
-
-                    <p><b>Kalydeco SMPC</b></p>
-                    <a [routerLink]="['/View', 'fc5b2006-68cd-4b36-aca5-7f412e316036']">fc5b2006-68cd-4b36-aca5-7f412e316036</a>
-                    <p><br></p>
+               
+                <div class="ema-medView-body" >
+                    <div *ngIf="!medicineList" class="ema-search-notFound">
+                        <p >Page not found</p>
+                    </div>
                     
-                    <p><b>Kalydeco Annex II</b></p>
-                    <a [routerLink]="['/View', '49c08f8f-ada2-4c7b-a67f-08f3dc3afe28']">49c08f8f-ada2-4c7b-a67f-08f3dc3afe28</a>
-                    <p><br></p>
-                    <p><b>Kalydeco Labelling</b></p>
-                    <a [routerLink]="['/View', 'c622a1c3-af89-44f0-95ba-48ee9e51dd57']">c622a1c3-af89-44f0-95ba-48ee9e51dd57</a>
-                    <p><br></p>
-                    <p><b>Kalydeco Package Leaflet</b></p>
-                    <a [routerLink]="['/View', 'de0704db-324d-4b62-8f31-c2ee2a4dd5d5']">de0704db-324d-4b62-8f31-c2ee2a4dd5d5</a>
-
-
-                     -->
-                     <p><b>Zynteglo</b></p>
-                     <a (click)="linkClicked('5ab10585-9823-40a7-910b-193fbf4058c7')">5ab10585-9823-40a7-910b-193fbf4058c7</a>
-                     <p><br></p>
-                     <p><b>Elocta</b></p>
-                     <a (click)="linkClicked('f9340b0e-f8cb-4dd9-84ed-9e057fd09896')" >f9340b0e-f8cb-4dd9-84ed-9e057fd09896</a>
-                     <p><br></p>
+                    <ema-document-header *ngIf="medicineList" [title]="resultsText"></ema-document-header>
+                     <ul class="ema-search-resultList" *ngIf="medicineList">
+                         <li class="ema-resultList-item" *ngFor="let medicine of medicineList">
+                             <div class="ema-resultItem-checkbox"></div>
+                             <div class="ema-resultItem-details">
+                                 <a class="ema-resultItem-name" [routerLink]="['/View', medicine.listId, medicine.routeLanguage, medicine.routeReference]">{{medicine?.name}} </a>
+                                 <p class="ema-resultItem-desc">Lorem ipsum</p>
+                                 <p class="ema-resultItem-date">Date of authorisation: 23/06/2017, Revision: 8, Authorised, Last updated: 28/04/2021</p>
+                             </div>
+                         </li>
+                     </ul>
 
                 </div>
 
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ema-search-footer">
                 <ema-footer></ema-footer>
 
             </div>
