--- a/portal/src/app/pages/search-page/search-page.component.scss
+++ b/portal/src/app/pages/search-page/search-page.component.scss
@@ -1,6 +1,6 @@
 @import "../../../../projects/ema-component-library/src/lib/ema-theme-variables.scss";
 :host {
-    .ema-search-page{
+    .ema-search-page {
         height: calc(100vh - 80px);
         @media (max-width: 576px) {
             & {
@@ -10,62 +10,111 @@
         }
     }
     .ema-search {
-        &-view{
+        &-view {
             height: inherit;
             overflow-y: auto;
-            .row{
-                padding:0px;
-                margin:0px;
-                width:100%;
-            }
-            p {
+            .row {
+                padding: 0px;
                 margin: 0px;
-                width:100%;
+                width: 100%;
             }
+           
             @media (max-width: 576px) {
                 & {
-                    max-width:100%;
-                    width:100%;
-                    height:100%;
+                    max-width: 100%;
+                    width: 100%;
+                    height: 100%;
                 }
             }
-            a{
-                &:hover{
-                    cursor:pointer;
+            a {
+                &:hover {
+                    cursor: pointer;
                     text-decoration: underline;
                 }
             }
-           
         }
-        &-main{
-            min-height:calc(100% - 188px);
-
+        &-main {
+            min-height: calc(100% - 188px);
         }
-        &-nav{
-            max-width:300px;
-            width:100%;
-            padding:0px;
+        &-nav {
+            padding: 40px;
             border-right: 1px solid $ema-border;
             @media (max-width: 576px) {
                 & {
-                    max-width:100%;
-                    width:100%;
+                    max-width: 100%;
+                    width: 100%;
                 }
             }
         }
-        &-body{
-          
-            padding:40px;
-
+        &-body {
+            padding: 0px;
             @media (max-width: 576px) {
                 & {
-                    max-width:100%;
-                    width:100%;
-                    height:100%;
+                    max-width: 100%;
+                    width: 100%;
+                    height: 100%;
                 }
             }
+        }
+        &-footer {
+            padding: 0px;
+            width: 100%;
+        }
+        &-notFound{
+            padding:40px;
+        }
+        &-resultList {
+            list-style: none;
+            padding: 0px;
 
+            .ema-resultList-item {
+                display: flex;
+                padding: 24px 16px;
+                border-bottom: 1px solid $ema-border;
+                &:last-child {
+                    border-bottom: none;
+                }
+
+                .ema-resultItem {
+                    &-name {
+                        font-weight: bold;
+                        font-size: 18px;
+                        line-height: 24px;
+                        color: $ema-primary;
+                        margin: 0px;
+                        text-decoration: none;
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+                    &-desc {
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 21px;
+                        color: black;
+                        margin: 16px 0px 8px 0px;
+                    }
+                    &-date {
+                        font-weight: normal;
+                        font-size: 16px;
+                        line-height: 21px;
+                        color: black;
+                        margin: 0px;
+                    }
+                    &-checkbox{
+                        width:24px;
+                        height:24px;
+                    }
+                }
+            }
         }
     }
-   
+    .ema-nav-title {
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 24px;
+        color: $ema-text-bold;
+        background-color: white;
+        margin-bottom: 16px;
+    }
 }
