Simple Search implementation

--- a/portal/projects/ema-component-library/src/lib/ema-theme-variables.scss
+++ b/portal/projects/ema-component-library/src/lib/ema-theme-variables.scss
@@ -4,3 +4,5 @@ $ema-text: #000000;
 $ema-text-bold: #666666;
 $ema-text-focused: #333333;
 $ema-border:#DDDDDD;
+$ema-tag-background:#EEEEEE;
+$ema-multiselect-background: #FAFAFA;
